# chompsky

./: CLAUDE.md  README.md  cabal.project  chompsky.cabal  fourmolu.yaml
app/: Main.hs  Trace.hs
config/: abbreviations.lua  boilerplate.lua  triage.lua
config/parsers/: activity.lua  category.lua  cost.lua  date_acquired.lua  note.lua
src/Chompsky/: CLI.hs  Config.hs  Pipeline.hs  TUI.hs  Types.hs
src/Chompsky/Config/: ParserSpec.hs
src/Chompsky/IO/: Csv.hs  CsvInput.hs  Workers.hs
src/Chompsky/Parser/: Build.hs  Scanner.hs
src/Chompsky/Pipeline/: Clean.hs  Fuzzy.hs  Normalize.hs  Parser.hs  Scanner.hs  Triage.hs
src/Chompsky/Pipeline/Fuzzy/: Internal.hs
src/Chompsky/Pipeline/Parser/: Build.hs  Internal.hs
src/Chompsky/TUI/: State.hs  Widgets.hs
test/: Main.hs
