cabal-version:      3.14
name:               chompsky
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Real Limoges
maintainer:         b.real.limoges@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   src
    default-language: GHC2024
    exposed-modules:
        Chompsky.Types
        Chompsky.CLI
        Chompsky.Config
        Chompsky.Config.ParserSpec
        Chompsky.IO.Csv
        Chompsky.IO.CsvInput
        Chompsky.IO.Workers
        Chompsky.Pipeline
        Chompsky.Pipeline.Clean
        Chompsky.Pipeline.Normalize
        Chompsky.Pipeline.Scanner
        Chompsky.Pipeline.Parser
        Chompsky.Pipeline.Parser.Internal
        Chompsky.Pipeline.Parser.Build
        Chompsky.Pipeline.Triage
        Chompsky.Pipeline.Fuzzy
        Chompsky.Pipeline.Fuzzy.Internal
        Chompsky.TUI
        Chompsky.TUI.State
        Chompsky.TUI.Widgets
    build-depends:
        base ^>=4.21.0.0
      , text
      , containers
      , unordered-containers
      , megaparsec
      , parser-combinators
      , vector
      , directory
      , filepath
      , hslua-core
      , hslua-marshalling
      , deepseq
      , aeson
      , cassava
      , bytestring
      , brick
      , vty
      , vty-crossplatform
      , time
      , async
      , stm
      , optparse-applicative
      , mtl
      , hashable

executable chompsky
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: GHC2024
    ghc-options:      -threaded -rtsopts "-with-rtsopts=-N -A64m -n4m"
    build-depends:
        base ^>=4.21.0.0
      , chompsky

test-suite chompsky-test
    import:           warnings
    default-language: GHC2024
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.21.0.0
      , chompsky
