cabal-version:      3.14
name:               chompsky
version:            1.0.0.0
synopsis:           Structured data extraction from natural language remarks
description:
    Chompsky is a text extraction pipeline that parses structured data from
    natural language remarks. It uses a pure functional core driven by Lua
    configuration files, with Mamdani fuzzy inference for confidence scoring
    and a triage stage that flags ambiguous inputs for LLM review.
category:           Text, NLP
license:            BSD-3-Clause
license-file:       LICENSE
author:             Real Limoges
maintainer:         b.real.limoges@gmail.com
build-type:         Simple
tested-with:        GHC ==9.12.2

common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   src
    default-language: GHC2024
    exposed-modules:
        Chompsky.Types
        Chompsky.Config
        Chompsky.Config.ParserSpec
        Chompsky.Pipeline
        Chompsky.IO.Csv
        Chompsky.IO.CsvInput
        Chompsky.IO.Workers
        Chompsky.CLI
        Chompsky.Pipeline.Fuzzy
        Chompsky.Pipeline.Scanner
        Chompsky.Pipeline.Triage
    other-modules:
        Chompsky.Pipeline.Clean
        Chompsky.Pipeline.Normalize
        Chompsky.Pipeline.Parser
        Chompsky.Pipeline.Parser.Internal
        Chompsky.Pipeline.Parser.Build
        Chompsky.TUI
        Chompsky.TUI.State
        Chompsky.TUI.Widgets
    build-depends:
        base ^>=4.21.0.0
      , text
      , containers
      , unordered-containers
      , megaparsec
      , parser-combinators
      , vector
      , directory
      , filepath
      , hslua-core
      , hslua-marshalling
      , deepseq
      , aeson
      , cassava
      , bytestring
      , brick
      , vty
      , vty-crossplatform
      , time
      , async
      , stm
      , optparse-applicative
      , mtl
      , hashable
      , hazy

executable chompsky
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: GHC2024
    ghc-options:      -threaded -rtsopts "-with-rtsopts=-N -A64m -n4m"
    build-depends:
        base ^>=4.21.0.0
      , chompsky

executable chompsky-trace
    import:           warnings
    main-is:          Trace.hs
    hs-source-dirs:   app
    default-language: GHC2024
    ghc-options:      -threaded -rtsopts "-with-rtsopts=-N -A64m -n4m"
    build-depends:
        base ^>=4.21.0.0
      , chompsky
      , text
      , bytestring
      , aeson
      , optparse-applicative

test-suite chompsky-test
    import:           warnings
    default-language: GHC2024
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.21.0.0
      , chompsky
      , tasty
      , tasty-hunit
      , text
      , containers
      , aeson
      , bytestring
      , directory
      , filepath
      , temporary
